# skills.uy

./: .gitignore  README.md  install.sh
skills/asse/: README.md  SKILL.md  pyproject.toml
skills/asse/npm/: README.md  package.json
skills/asse/npm/scripts/: postinstall.js  python.js
skills/asse/scripts/: bump.sh  publish-npm.sh  publish-pypi.sh  release.sh
skills/asse/src/asse_cli/: __init__.py  agenda_client.py  cli.py  client.py  extract.py  genexus.py  har.py  hcd_client.py  hcd_extract.py
skills/asse/tests/: test_cli.py  test_client.py  test_har_extract.py  test_hcd_extract.py
