[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asse-cli"
version = "0.1.0"
description = "CLI experimental para Agenda Web de ASSE e Historia Clinica Digital"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.45.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
asse = "asse_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
